--- a/sectionsstyle.css
+++ b/sectionsstyle.css
@@ -68,9 +68,10 @@ header ul li a
     text-decoration: none;
     color: var(--white);
     letter-spacing: 2px;
-    font-weight: 500px;
+    font-weight: bolder;
     transition: 0.6s;
     font-size: 21px;
+
 }
 
 /* ____________________ */
@@ -150,7 +151,7 @@ section
 .rect1 p
 {
     font-family: 'Poppins', sans-serif;
-    font-size: 88px;
+    font-size: 60px;
 }
 
 .rect2 p
@@ -160,6 +161,18 @@ section
     font-size: 48px;
 }
 
+.gear-img{
+ margin-top: 20px;
+ animation: rotation 25s infinite linear;
+}
+@keyframes rotation {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(359deg);
+    }
+  }
 /*       section2       */
 
 .section__about
@@ -240,13 +253,23 @@ section
     height: 100vh;
 }
 
+/*       section3       */
+
+.projekty-h{
+    font-family: 'IBM Plex Sans', sans-serif;
+    font-size: 500%;
+    text-align: center;
+    color: var(--white);
+    padding-top: 40vh;
+}
+
 /*       section4       */
 
 .section__contact
 {
     color: var(--cl6);
     font-family: 'IBM Plex Sans', sans-serif;
-    font-size: 24px;
+    font-size: 25px;
 }
 
 .rect6
@@ -267,6 +290,10 @@ section
     background: var(--cl5);
 }
 
+.test{
+    padding: 50px;
+}
+
 
 .rect7 p
 {
@@ -274,3 +301,4 @@ section
     text-align: justify;
     text-justify: inter-word;
 }
+
