--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,12 @@ body {
     z-index: 1030;
 }
 
+.navbar-brand img {
+    margin-right: 0.5rem;
+    vertical-align: middle;
+}
+
+
 .main-content {
     flex-grow: 1;
     padding-top: 3.5rem;
@@ -163,7 +169,6 @@ footer {
     animation-delay: 0.5s;
 }
 
-/* Adjust font size for smaller screens */
 @media (max-width: 991.98px) {
     .hero-section h1 {
         font-size: 1.75rem;
